--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Static Website</title>
+        <title>Welcome Website</title>
     </head>
     <body>
-        <h2>Static Website</h2>
+        <h2>Welcome Website</h2>
     </body>
 </html>
