--- a/static/form.html
+++ b/static/form.html
@@ -6,8 +6,8 @@
     <body>
         <div>
             <form method="POST" action="/form">
-                <label>name</label><input name="name" type="text" value=""/>
-                <label>Address</label><input name="address" type="text" value=""/>
+                <label>Name</label><input name="name" type="text" value=""/>
+                <label>Surname</label><input name="surname" type="text" value=""/>
 
                 <input type="submit" value="submit"/>
             </form>
